# ShipDetection

./: .gitignore  README.md  README.txt  dashboard.py  deep_training_metrics.csv  final_main.ipynb  main.ipynb  main.py  pyproject.toml  ship_epoche.txt  stream_model.py  test_metrics.csv  training_metrics_improve.csv
